Fix `.cookie-container` on smaller screens set `display` of `.cookie-container` to `none` in `styles.css`

--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@
     left: calc(50vw - 507px);
     line-height: 28px;
   }
-  .cookie-container { transform: scale(1.5); transform-origin: bottom right; }
+  .cookie-container { display: none; }
   .intro-button-container {
     height: 80vh !important;
   }
